# arch-niri

./: config.toml  install.py  postinstall.py  pyproject.toml
installer/: config.py  runner.py
installer/steps/: bootstrap.py  packages.py  secureboot.py  system.py  user.py  yay.py
