[project]
name = "arch-niri"
version = "0.1.0"
description = "Arch Linux: Niri installation scripts"
requires-python = ">=3.14"

[dependency-groups]
dev = ["ruff>=0.11", "mypy>=1.15", "basedpyright>=1.29"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "S", "B", "N"]

[tool.mypy]
python_version = "3.14"
strict = true

[tool.basedpyright]
include = ["installer", "install.py", "postinstall.py"]
pythonVersion = "3.14"
